added extra sections to the main page

--- a/component/index.html
+++ b/component/index.html
@@ -1,22 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>caffino.</title>
-    <link rel="stylesheet" href="../css/main.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>caffino.</title>
+  <link rel="stylesheet" href="../css/main.css" />
+  <link rel="stylesheet" href="../css/section1.css" />
+  <link rel="stylesheet" href="../css/section2.css" />
+  <link rel="stylesheet" href="../css/section3.css" />
+    <link rel="stylesheet" href="../css/section4.css" />
 </head>
 <nav>
-     <img src="/ProjektiFinal/assets/caffin.png">
-      <label for="open-menu">&#9776</label>
-      <input type="checkbox" id="open-menu" />
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-      <li> <div class="menu-button"><a href="#">Menu</a> </div> </li>
-      </ul>
+  <img src="../assets/caffin.png" class="caffinlogo">
+  <label for="open-menu">&#9776</label>
+  <input type="checkbox" id="open-menu" />
+  <ul>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">About</a></li>
+    <li>
+      <div class="menu-button"><a href="#">Menu</a> </div>
+    </li>
+  </ul>
 </nav>
+
 <body>
-    
+  <div class="main-1">
+    <div class="section-1">
+      <div class="left-1">
+        <h1 class="title"> A great place to enjoy <br> your coffee</h1>
+        <a class="description">Freshly brewed coffee and delicious treats,crafted with passion to brighten your
+          day. Relax, sip, and savor the moments with us.</a>
+        <div class="viewmenu"> View our menu </div>
+      </div>
+      <div class="right-1">
+        <img src="../assets/coffeecup.png" class="coffeecup">
+      </div>
+    </div>
+  </div>
+
+  <div class="main-2">
+    <div class="section-2">
+      <div class="left-2">
+        <video width="70%" height="120%" autoplay style="margin-left:30px;">
+          <source src="../assets/coffeevideo.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+      </div>
+      <div class="right-2">
+        <h1> Why We're the Best Choice</h1> <br>
+        <div class="info">
+          <p class="highlight"> Our ambiance</p> <br>
+          <p class="highlight-info"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua.</p>
+        </div> <br>
+        <div class="info">
+          <p class="highlight"> Strongly crafted bevrages</p> <br>
+          <p class="highlight-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="main-3">
+    <div class="section-3">
+      <div class="explore">
+        <h1> Explore our signature blends</h1>
+      </div>
+      <div class="experts">
+        <div class="expert">
+          <img src="../assets/Container.png" class="menuimg" />
+          <div class="namenprice">
+            <p class="expertise">Cappucino</p>
+            <p class="bug">3$</p>
+          </div>
+          <div class="cartbtn"> &#128722 Add to cart </div>
+        </div>
+        <div class="expert">
+          <img src="../assets/Container.png" class="menuimg" />
+          <div class="namenprice">
+            <p class="expertise">Cappucino</p>
+            <p class="bug">3$</p>
+          </div>
+          <div class="cartbtn"> &#128722 Add to cart </div>
+        </div>
+                <div class="expert">
+          <img src="../assets/Container.png" class="menuimg" />
+          <div class="namenprice">
+            <p class="expertise">Cappucino</p>
+            <p class="bug">3$</p>
+          </div>
+          <div class="cartbtn"> &#128722 Add to cart </div>
+        </div>
+        <div class="expert">
+          <img src="../assets/Container.png" class="menuimg" />
+          <div class="namenprice">
+            <p class="expertise">Cappucino</p>
+            <p class="bug">3$</p>
+          </div>
+          <div class="cartbtn"> &#128722 Add to cart </div>
+        </div>
+      </div>
+      <div class="seemore"> See more </div>
+    </div>
+  </div>
+  </div>
+
+  <div class="main-4">
+    <div class="section-4">
+      <div class="left-4">
+          <img src="../assets/caffinwhite.png" class="caffinf"> <br>
+        <a>Copyright © 2024 Caffino Caffe <br>
+All Rights Reserved </a>
+    </div>
+    <div class="right-4">
+      <div>
+        <div class="newsletter"><h1>Subscribe to our newsletter:</h1></div>
+        <div class="sub-area">
+          <div class="subtext">Enter your email</div>
+          <div class="subbtn">Subscribe</div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
