--- a/css/main.scss
+++ b/css/main.scss
@@ -1,12 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Montserrat:ital@0;1&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Montserrat:ital@0;1&display=swap");
 
-body{
-    background-color: #E5CFB5;
-    font-family:'DM Sans'
+body {
+    font-family: "DM Sans";
 }
 
-nav{
-    background-color:#E5CFB5;
+* {
+    margin: 0;
+}
+
+.main-1 {
+    background-color: #e5cfb5;
+}
+
+nav {
+    background-color: #e5cfb5;
     color: #1e1e1e;
     padding: 0 20px;
     height: 80px;
@@ -14,38 +21,94 @@ nav{
     grid-template-columns: 1fr 4fr;
     grid-template-rows: 1fr;
     grid-template-areas: "logo menu";
-    align-items:center;
-    font-size:20px;
+    align-items: center;
+    font-size: 20px;
 }
-.menu-button{
-    background-color:#3E2723;
-    width:75px;
-    height:40px;
-    border-radius:25px;
-    align-items:center;
-    display:flex;
+.menu-button {
+    background-color: #3e2723;
+    width: 75px;
+    height: 40px;
+    border-radius: 25px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    a {
+        color: white;
+    }
 }
-img{
-    grid-area:logo;
-    height:55px;
-    width:auto;
+.caffinlogo {
+    grid-area: logo;
+    height: 55px;
+    width: auto;
 }
 
-ul{
-    grid-area:menu;
-    list-style:none;
-    justify-self:end;
-    li{
+ul {
+    grid-area: menu;
+    list-style: none;
+    justify-self: end;
+    li {
         display: inline-block;
         margin: 0 15px;
-        a{
+        a {
             color: #1e1e1e;
-            text-decoration:none;
+            text-decoration: none;
         }
     }
 }
 
 input,
-label{
-    display:none;
+label {
+    display: none;
+}
+
+@media screen and (max-width: 768px) {
+    nav {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 80px 1fr;
+        grid-template-areas: "logo hamburger" "menu menu";
+        height: auto;
+    }
+    label {
+        display: block;
+        font-size: 30px;
+        justify-self: end;
+    }
+    ul {
+        display: none;
+    }
+    .menu-button {
+        background-color: #3e2723;
+        width: 125px;
+        height: 60px;
+        border-radius: 25px;
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        a {
+            color: white;
+        }
+    }
+    .caffinlogo {
+        width: auto;
+        height: 70px;
+    }
+    #open-menu:checked + ul {
+        width: 100%;
+        grid-area: menu;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: calc(100vh - 80px);
+        flex-direction: column;
+        li {
+            display: block;
+            font-size: 30px;
+            margin: 10px 0;
+            color: #1e1e1e;
+            a {
+                text-decoration: none;
+                font-size: 45px;
+            }
+        }
+    }
 }
